--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -2,7 +2,15 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/01.md`
+How to create a git branch with git command  ```git checkout -b new_feature``` and not pushing all my changes to Kents repo :)
+<https://www.tomasbeuzen.com/post/git-fork-branch-pull/> 
+
+The importance of the script type "module".
+ <https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attr-type>
+
+Learned about append()
+Very useful to attach Node or String objects to Elements.
+<https://developer.mozilla.org/en-US/docs/Web/API/Element/append>
 
 ## Background
 
