Wrapping up Exercise 01

--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -1,6 +1,6 @@
 # Basic JavaScript-rendered Hello World
 
-## 📝 Your Notes
+## 📝 My Notes
 
 How to create a git branch with git command  ```git checkout -b new_feature``` and not pushing all my changes to Kents repo :)
 <https://www.tomasbeuzen.com/post/git-fork-branch-pull/> 
