--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -1,8 +1,12 @@
 # Intro to raw React APIs
 
-## 📝 Your Notes
+## 📝 My Notes
 
-Elaborate on your learnings here in `src/exercise/02.md`
+- Had to add crossorigin="anonymous" to the script tags
+- React.createElement vs Document.createElement
+- ReactDOM.createRoot(someElementHere)
+- root.render(someElement)
+
 
 ## Background
 
