Extra stuff Exercise 02

--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -6,7 +6,8 @@
 - React.createElement vs Document.createElement
 - ReactDOM.createRoot(someElementHere)
 - root.render(someElement)
-
+- Relationship React and ReactDOM
+- ReactDOM.render is no longer supported in React 18. Use createRoot instead
 
 ## Background
 
