--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -3,7 +3,7 @@
 ## 📝 My Notes
 
 - Had to add crossorigin="anonymous" to the script tags
-- React.createElement vs Document.createElement
+- React.createElement vs document.createElement
 - ReactDOM.createRoot(someElementHere)
 - root.render(someElement)
 - Relationship React and ReactDOM
