--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -1,8 +1,8 @@
 # Using JSX
 
-## 📝 Your Notes
+## 📝 My Notes
 
-Elaborate on your learnings here in `src/exercise/03.md`
+- Script type for babel is type="text/babel"
 
 ## Background
 
