--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -3,6 +3,8 @@
 ## 📝 My Notes
 
 - Script type for babel is type="text/babel"
+- How JSX exist within javascript and how we tell Babel to do or don't do stuff (like hint {})
+- Interpolate ("insert of somethg of a different nature into something else")
 
 ## Background
 
