--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -5,6 +5,8 @@
 - Script type for babel is type="text/babel"
 - How JSX exist within javascript and how we tell Babel to do or don't do stuff (like hint {})
 - Interpolate ("insert of somethg of a different nature into something else")
+- Spread props by interpolate the entire props object using the JSX syntax {... } <https://reactjs.org/docs/jsx-in-depth.html#spread-attributes>
+- NOTE: Position matters, the latter prop value will override the former prop values.
 
 ## Background
 
