--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -4,7 +4,7 @@
 
 - Script type for babel is type="text/babel"
 - How JSX exist within javascript and how we tell Babel to do or don't do stuff (like hint {})
-- Interpolate ("insert of somethg of a different nature into something else")
+- Interpolate ("insert of somethg of a different nature into something else"), use syntax {}
 - Spread props by interpolate the entire props object using the JSX syntax {... } <https://reactjs.org/docs/jsx-in-depth.html#spread-attributes>
 - NOTE: Position matters, the latter prop value will override the former prop values.
 
