Foundation for custom components

--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -1,8 +1,10 @@
 # Creating custom components
 
-## 📝 Your Notes
+## 📝 My Notes
 
-Elaborate on your learnings here in `src/exercise/04.md`
+- Step one: Create a function that returns a div. You can pass the props, or some prop - do what you want, basically!
+- Step two: Use your function to create a react element, by passing your function as the first argument to the React.createElement function.
+- Step three: Interpolate your new React element into your container element.
 
 ## Background
 
