--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -6,6 +6,12 @@
 - Step two: Use your function to create a react element, by passing your function as the first argument to the React.createElement function.
 - Step three: Interpolate your new React element into your container element.
 
+Extra credits
+
+- Upper case naming tells Babel to render the component as a reference to the function (or declaration) in the scope.
+- Add PropTypes with requirments for PropTypes.func to type guard your props. Not as neccessary when upsing typescript!
+- Replace the container div with React Fragments syntax: <React.Fragments> </React.Fragments> or short <> </>
+
 ## Background
 
 Just like in regular JavaScript, you often want to share code which you do using
