--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -1,8 +1,10 @@
 # Styling
 
-## 📝 Your Notes
+## 📝 My Notes
 
-Elaborate on your learnings here in `src/exercise/05.md`
+- in React we pass the style prop as an object of CSS, a combination of JSX expression and an object expression. style = {{}}
+- Order matters! In the style object the order where you put things in your wrapper compared to the ones you add, will matter-
+- When creating a custom wrapper component for passing styles components will have in common, start with the "enforced style" (from the wrapping component), and then put the "added styles". This way we dont override the props thats being added along the way with our props spread.
 
 ## Background
 
